# chaos

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md
doc/: kosinski.txt
haskell/: LICENSE  README.md  SegaDecompressor.cabal
haskell/src/: NiceOpt.hs  RLE.hs  S2Data.hs  S2PaletteExtractor.hs  S2TileExtractor.hs  SegaDecompressor.hs
include/: Buffer.h  ChaosApplication.h  ChaosLog.h  ChaosRom.h  ChaosRom_Sonic3.h  ChaosRom_Sonic3k.h  CommonDialog_Open.h  DialogLoadLevel.h  Icons.h  Instance_Level.h  Resource.h  SegaPalette.h  SegaRom.h  SonicMap.h  WndFrame.h  WndLevel.h  WndMap.h
msvc/: .gitignore  Chaos.sln  Chaos.vcproj  Chaos.vcxproj  README.md
msvc/include/: Application.h  Block.h  BlockBuffer.h  Buffer.h  Buffer_Blocks.h  Buffer_Patterns.h  ChaosApplication.h  ChaosException.h  ChaosLog.h  ChaosRom.h  ChaosRomFactory.h  ChaosRom_Sonic2.h  ChaosRom_Sonic3.h  Chunk.h  ChunkDesc.h  CommonDialog.h  CommonDialogFactory.h  CommonDialog_Open.h  CommonDialog_Save.h  DialogLoadLevel.h  DialogOpen.h  Dialogs.h  Icons.h  Instance.h  InstanceValue.h  Instance_Level.h  Instance_Level_S2G.h  Instance_Level_S3G.h  Kosinski.h  Level.h  LevelSelectDialog.h  Level_Sonic2.h  Level_Sonic3.h  Map.h  Menus.h  NativeColor.h  OpenRomDialog.h  Palette.h  Pattern.h  PatternBuffer.h  (+23 more)
msvc/res/: Dialogs.rc  Icons.rc  Menus.rc
msvc/src/: Application.cpp  Block.cpp  BlockBuffer.cpp  Buffer.cpp  Buffer_Blocks.cpp  Buffer_Patterns.cpp  ChaosApplication.cpp  ChaosException.cpp  ChaosLog.cpp  ChaosRom.cpp  ChaosRomFactory.cpp  ChaosRom_Sonic2.cpp  ChaosRom_Sonic3.cpp  Chunk.cpp  CommonDialog.cpp  CommonDialogFactory.cpp  CommonDialog_Open.cpp  CommonDialog_Save.cpp  DialogLoadLevel.cpp  DialogOpen.cpp  Instance.cpp  Instance_Level_S2G.cpp  Instance_Level_S3G.cpp  Kosinski.cpp  LevelSelectDialog.cpp  Level_Sonic2.cpp  Level_Sonic3.cpp  Main.cpp  Map.cpp  OpenRomDialog.cpp  Palette.cpp  Pattern.cpp  PatternBuffer.cpp  Precompiled.cpp  Rom.cpp  RomFactory.cpp  SegaPalette.cpp  SegaPattern.cpp  SegaRom.cpp  Sonic2Level.cpp  (+11 more)
qt/: .gitignore  CMakeLists.txt  README.md  chaos.qrc
qt/cmake/: MacOSXBundleInfo.plist.in
qt/src/: Block.cpp  Block.h  Chunk.cpp  Command.h  Game.h  GameFactory.cpp  Kosinski.cpp  Kosinski.h  KosinskiReader.cpp  KosinskiReader.h  KosinskiWriter.cpp  KosinskiWriter.h  Level.h  Logger.h  Map.cpp  Map.h  Palette.cpp  Palette.h  Pattern.cpp  Pattern.h  PatternDesc.h  Rom.cpp  Rom.h  RomFactory.cpp  RomFactory.h  SonicReader.cpp  SonicReader.h  Window.cpp  Window.h  main.cpp
qt/src/commands/: PencilCommand.cpp  PencilCommand.h
qt/src/games/: Sonic2.cpp  Sonic2.h  Sonic2Level.cpp  Sonic2Level.h  Sonic3.cpp  Sonic3.h  Sonic3Level.cpp  Sonic3Level.h
qt/src/os/: macos.h  macos.mm
qt/src/roms/: Sonic2.cpp  Sonic2.h  Sonic3.cpp  Sonic3.h
qt/src/ui/: BlockInspector.cpp  BlockSelector.cpp  BlockSelector.h  ChunkInspector.cpp  LevelSelect.cpp  LevelSelect.h  MapEditor.cpp  MapEditor.h  PaletteInspector.cpp  PaletteInspector.h  PatternInspector.cpp  PatternInspector.h  Rectangle.h  RomInfo.cpp  RomInfo.h  Window.cpp  Window.h  ZoomSupport.cpp
qt/test/: TestKosinskiReader.cpp  TestKosinskiWriter.cpp
res/: Chaos.icns  Chaos.rc  Dialogs.rc
src/: Block.cpp  Block.h  Buffer_Patterns.cpp  ChaosLog.cpp  ChaosRomFactory.cpp  ChaosRom_Sonic2.cpp  Chunk.cpp  Chunk.h  ChunkDesc.h  CommonDialog_Save.cpp  GameFactory.h  Instance.cpp  Instance_Level_S3G.cpp  KosinskiReader.cpp  KosinskiReader.h  KosinskiWriter.cpp  KosinskiWriter.h  Logger.cpp  Map.cpp  Map.h  Pattern.cpp  Pattern.h  Rom.h  SegaPalette.cpp  SonicBlock.cpp  SonicReader.cpp
src/commands/: PencilCommand.cpp  PencilCommand.h
src/games/: Sonic2.cpp  Sonic2.h  Sonic2Level.cpp  Sonic3.cpp  Sonic3.h  Sonic3Level.h
src/ui/: BlockInspector.cpp  BlockInspector.h  BlockSelector.cpp  BlockSelector.h  ChunkInspector.h  LevelSelect.cpp  MapEditor.cpp  MapEditor.h  PaletteInspector.h  PatternInspector.cpp  PatternInspector.h  Window.cpp  Window.h  ZoomSupport.h
test/: TestKosinskiReader.cpp  TestKosinskiWriter.cpp
test/data/: ehz1.kosinski  ehz1.kosinski.h  ehz1.raw.h
